        - Add additional log messages during failure in accept (Mark Martinec)
        - Fix double decrement bug in PreFork.pm (Bill Nesbitt, Carlos Velasco) (rt #21271)
        - Fix precedence bug with non-parened open (John W. Krahn)
        - Check setuid better after POSIX setuid (Ricardo Signes) (rt #21262)
        - Update Syslog options parsing (Carlos Velasco) (rt #21265)

0.94   Jul 08 2006
        - Add nofatal to Sys::Syslog::openlog if Sys::Syslog
          version >= 0.15 (thanks to DSCHWEI on cpan)
        - Added the leave_children_open_on_hup flag which leaves
          open connections open when the server
          is hupped.  It is false by default.
        - Make sure new and run can both take a hash or a hashref of values.
        - More fixes to HUP under taint (thanks to LUPE on cpan)
        - Allow for port, host, and proto to be passed as arrayrefs to run and new.
        - Fix bug in a check for dead child processes algorithm in
          PreFork server (thanks to Michael Virnstein).

0.93   Mar 23 2006
        - Allow for get sock info routines to use $peer->{client} rather than STDIN
          which may not be set if the "no_client_stdout" flag is set. (thanks to
          Mark Martinec for pointing this out)

0.92   Mar 13 2006
        - Allow for duplicated STDIN and STDOUT to properly close.
          Previously they closed because they were simple symbol globs.
          Now they need an explicit close be cause they are opened to
          the client socket's file descriptors.
        - Add flag to disable all of the binding of client to STDIN and STDOUT

0.91   Mar 08 2006
        - Abstract shutdown_sockets method that is called at the end
          of server_close (to allow for calling in other places).
        - Make sure close_children unsets the overridden signals in
          the forked and preforked servers.
        - Better handling of STDIN and STDOUT as provided by tye on